--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,3 +50,24 @@ input[type="date"]:focus:before,
 input[type="date"]:valid:before {
     content: "";
 }
+
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgba(255,255,255, 1);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
