--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,7 +72,7 @@ input[type="date"]:valid:before {
     margin-top: 30px;
 }
 
-.page-link{
+.page-link, .page-link:hover, .page-link:active, .page-link:visited{
     color: orangered;
     background-color: white;
 }
